[project]
name = "PyRHEED"
version = "1.0.0"
authors = [
  { name="Yu Xiang", email="yux1991@gmail.com" },
]
description = "A python package for RHEED data analysis and simulation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yux1991/PyRHEED"
Issues = "https://github.com/yux1991/PyRHEED/issues"