[project]
name = "PyRHEED"
version = "1.0.5"
authors = [
  { name="Yu Xiang", email="yux1991@gmail.com" },
]
description = "A python package for RHEED data analysis and simulation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy>=6.1.0",
    "lxml>=5.2.2",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "pillow>=10.3.0",
    "plotly>=5.22.0",
    "pymatgen>=2024.5.1",
    "PyQt6>=6.7.0",
    "PyQt6-Charts>=6.7.0",
    "PyQt6-DataVisualization>=6.7.0",
    "rawpy>=0.21.0",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
    "shapely>=2.0.4",
    "tqdm>=4.66.4",
    "urllib3>=2.2.1",
    "xlrd>=2.0.1"
]

[project.urls]
Homepage = "https://github.com/yux1991/PyRHEED"
Issues = "https://github.com/yux1991/PyRHEED/issues"